# mm_tcc_jit

./: .gitignore  CMakeLists.txt  build_arm.sh  build_tcc_for_arm.sh  build_x86.sh  main.c  main.cpp
